--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "material-ui",
+  "name": "client",
   "version": "3.0.0",
-  "description": "hello world starter",
-  "keywords": [
-    "react",
-    "material"
-  ],
-  "homepage": "https://codesandbox.io/s/4j7m47vlm4",
-  "main": "index.js",
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "4.11.2",
@@ -15,12 +8,19 @@
     "mongoose": "^5.13.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-scripts": "4.0.2",
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,17 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cavalcant3/Urna-React-API/issues"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
