--- a/server/api/package.json
+++ b/server/api/package.json
@@ -8,5 +8,9 @@
     "start": "nodemon server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.13.2"
+  }
 }
