--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "4.11.2",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "react": "latest",
     "react-dom": "latest",
-    "react-scripts": "4.0.2",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.2"
   },
   "devDependencies": {},
   "scripts": {
