--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "4.11.2",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "react": "latest",
