--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,16 @@
   "name": "client",
   "version": "3.0.0",
   "dependencies": {
-    "@material-ui/core": "latest",
+    "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "4.11.2",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-notifications-component": "^3.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.2"
   },
